Added the header section

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,6 @@
-@use 'variables';
-
 #root {
   height: 100vh;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
