--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,6 @@
 #root {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }/*# sourceMappingURL=App.css.map */
