--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,14 +12,9 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  transition: all 0.5s ease-in-out;
 }
 
 body {
   background-color: variables.$main-bg;
-}
-
-@media screen and (min-width: 767px) {
-  body {
-    background-color: red;
-  }
 }
