--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,4 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.button-container {
+  display: flex;
+  gap: 10px;
 }/*# sourceMappingURL=App.css.map */
