--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,7 +2,15 @@ main {
   padding: 8px;
 }
 main .main {
-  max-width: 1042px;
+  max-width: 1440px;
   width: 100%;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .main {
+    grid-template-columns: 100px 1fr 2fr;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
 }/*# sourceMappingURL=Main.css.map */
