--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -2,8 +2,15 @@ main {
   padding: 8px;
 
   .main {
-    max-width: 1042px;
+    max-width: 1440px;
     width: 100%;
     margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main {
+    grid-template-columns: 100px 1fr 2fr;
+    column-gap: 20px;
   }
 }
