--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,5 +2,5 @@ $main-bg: #f3f4f6;
 $light-bg: #fff;
 $light-color: #fff;
 $dark-color: #000;
-$resume-header-bg: rgb(14, 55, 78);
+$colored-bg: rgb(14, 55, 78);
 $hover-bg: rgb(7, 26, 37);
