--- a/src/styles/ResumeContainer.scss
+++ b/src/styles/ResumeContainer.scss
@@ -1,24 +1,27 @@
 @use 'variables';
 
-.cv-personal-details {
-  background-color: variables.$colored-bg;
-  height: min-content;
-  text-align: center;
-  color: variables.$light-bg;
-  padding: 8px;
-  margin-bottom: 0;
-
-  h3 {
-    font-size: 2rem;
-  }
-}
-
-.cv-container {
+.resume-container {
   background-color: variables.$light-bg;
   line-height: 1.5;
+  margin-bottom: 16px;
 
-  section {
-    margin-bottom: 8px;
+  .resume-personal-details {
+    background-color: variables.$colored-bg;
+    height: min-content;
+    text-align: center;
+    color: variables.$light-bg;
+    margin-bottom: 0;
+
+    h3 {
+      font-size: 2rem;
+    }
+  }
+
+  .resume-career-summary,
+  .resume-personal-details,
+  .resume-experience,
+  .resume-educations {
+    padding: 8px;
   }
 
   h4,
