--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -9,12 +9,14 @@ button {
   border: none;
   cursor: pointer;
   transition: all 0.5s ease;
-  margin: 0 auto;
   display: block;
-  align-self: self-start;
 }
 
 button:hover {
   background-color: rgb(7, 26, 37);
   transform: scale(1.1);
+}
+
+.create-resume-button {
+  margin: 0 auto;
 }/*# sourceMappingURL=Button.css.map */
