--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -10,12 +10,15 @@ button {
   border: none;
   cursor: pointer;
   transition: all 0.5s ease;
-  margin: 0 auto;
   display: block;
-  align-self: self-start;
+  // align-self: self-start;
 }
 
 button:hover {
   background-color: variables.$hover-bg;
   transform: scale(1.1);
+}
+
+.create-resume-button {
+  margin: 0 auto;
 }
