--- a/src/styles/ResumeForm.css
+++ b/src/styles/ResumeForm.css
@@ -1,4 +1,4 @@
-.personal-details-wrapper {
+.personal-details-form-wrapper {
   background-color: #fff;
   padding: 24px 16px;
   box-shadow: 1px 1px 2px #000;
@@ -6,16 +6,13 @@
   border-radius: 5px;
   border: none;
 }
-.personal-details-wrapper .personal-details-header {
+.personal-details-form-wrapper .personal-details-form-header {
   display: flex;
   justify-content: space-between;
 }
-.personal-details-wrapper .personal-details-title {
+.personal-details-form-wrapper .personal-details-form-title {
   display: flex;
   gap: 10px;
-}
-.personal-details-wrapper fieldset {
-  border: none;
 }
 
 .educations-wrapper {
@@ -52,7 +49,7 @@
   gap: 10px;
 }
 
-.personal-details-icon,
+.personal-details-form-icon,
 .educations-icon,
 .experience-icon,
 .reveal-icon {
@@ -67,6 +64,8 @@ fieldset {
 fieldset label {
   display: inline-block;
   margin-bottom: 5px;
+  font-size: 1rem;
+  font-weight: 600;
 }
 fieldset input,
 fieldset textarea {
@@ -80,8 +79,4 @@ fieldset textarea {
 }
 fieldset input:focus {
   outline-color: rgb(14, 55, 78);
-}
-
-h1 {
-  font-size: 2rem;
 }/*# sourceMappingURL=ResumeForm.css.map */
