--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -17,6 +17,7 @@ button:hover {
   transform: scale(1.1);
 }
 
-.create-resume-button {
+.create-resume-button,
+.add-education-button {
   margin: 0 auto;
 }/*# sourceMappingURL=Button.css.map */
