--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -11,7 +11,6 @@ button {
   cursor: pointer;
   transition: all 0.5s ease;
   display: block;
-  // align-self: self-start;
 }
 
 button:hover {
@@ -19,6 +18,7 @@ button:hover {
   transform: scale(1.1);
 }
 
-.create-resume-button {
+.create-resume-button,
+.add-education-button {
   margin: 0 auto;
 }
