--- a/src/styles/Educations.css
+++ b/src/styles/Educations.css
@@ -1,3 +1,9 @@
-li {
+.educations-list {
   list-style-type: none;
+}
+
+.education-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }/*# sourceMappingURL=Educations.css.map */
