Implemented the experience section

--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -25,10 +25,12 @@ button:disabled {
 }
 
 .create-resume-button,
-.add-education-button {
+.add-education-button,
+.add-experience-button {
   margin: 0 auto;
 }
 
-.add-education-button {
+.add-education-button,
+.add-experience-button {
   margin-top: 32px;
 }
