--- a/src/styles/ResumeForm.css
+++ b/src/styles/ResumeForm.css
@@ -35,41 +35,50 @@
 .personal-details-wrapper .personal-details-icon,
 .personal-details-wrapper .educations-icon,
 .personal-details-wrapper .experience-icon,
-.personal-details-wrapper .hide-details,
-.personal-details-wrapper .show-details,
+.personal-details-wrapper .hide-personal-details,
+.personal-details-wrapper .show-personal-details,
 .personal-details-wrapper .show-educations,
 .personal-details-wrapper .hide-educations,
-.personal-details-wrapper .reveal-icon,
+.personal-details-wrapper .hide-experiences,
+.personal-details-wrapper .show-experiences,
 .educations-wrapper .personal-details-icon,
 .educations-wrapper .educations-icon,
 .educations-wrapper .experience-icon,
-.educations-wrapper .hide-details,
-.educations-wrapper .show-details,
+.educations-wrapper .hide-personal-details,
+.educations-wrapper .show-personal-details,
 .educations-wrapper .show-educations,
 .educations-wrapper .hide-educations,
-.educations-wrapper .reveal-icon,
+.educations-wrapper .hide-experiences,
+.educations-wrapper .show-experiences,
 .experience-wrapper .personal-details-icon,
 .experience-wrapper .educations-icon,
 .experience-wrapper .experience-icon,
-.experience-wrapper .hide-details,
-.experience-wrapper .show-details,
+.experience-wrapper .hide-personal-details,
+.experience-wrapper .show-personal-details,
 .experience-wrapper .show-educations,
 .experience-wrapper .hide-educations,
-.experience-wrapper .reveal-icon {
+.experience-wrapper .hide-experiences,
+.experience-wrapper .show-experiences {
   width: 20px;
 }
-.personal-details-wrapper .hide-details,
-.personal-details-wrapper .show-details,
+.personal-details-wrapper .hide-personal-details,
+.personal-details-wrapper .show-personal-details,
 .personal-details-wrapper .show-educations,
 .personal-details-wrapper .hide-educations,
-.educations-wrapper .hide-details,
-.educations-wrapper .show-details,
+.personal-details-wrapper .hide-experiences,
+.personal-details-wrapper .show-experiences,
+.educations-wrapper .hide-personal-details,
+.educations-wrapper .show-personal-details,
 .educations-wrapper .show-educations,
 .educations-wrapper .hide-educations,
-.experience-wrapper .hide-details,
-.experience-wrapper .show-details,
+.educations-wrapper .hide-experiences,
+.educations-wrapper .show-experiences,
+.experience-wrapper .hide-personal-details,
+.experience-wrapper .show-personal-details,
 .experience-wrapper .show-educations,
-.experience-wrapper .hide-educations {
+.experience-wrapper .hide-educations,
+.experience-wrapper .hide-experiences,
+.experience-wrapper .show-experiences {
   cursor: pointer;
 }
 
