--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -24,10 +24,12 @@ button:disabled {
 }
 
 .create-resume-button,
-.add-education-button {
+.add-education-button,
+.add-experience-button {
   margin: 0 auto;
 }
 
-.add-education-button {
+.add-education-button,
+.add-experience-button {
   margin-top: 32px;
 }/*# sourceMappingURL=Button.css.map */
