Added the fuctionality for a checkbox for current working place

--- a/src/styles/ResumeContainer.css
+++ b/src/styles/ResumeContainer.css
@@ -23,4 +23,10 @@
 .resume-container h4,
 .resume-container hr {
   margin-bottom: 8px;
+}
+
+.company-name,
+.school-name {
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=ResumeContainer.css.map */
