Edited the buttons position to align well

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,9 +12,11 @@
 }
 
 @media screen and (min-width: 768px) {
-  .button-container {
+  .large-button-container {
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
     flex-direction: column;
     justify-content: unset;
-    gap: 10px;
   }
 }/*# sourceMappingURL=App.css.map */
